--- a/templates/guide.html
+++ b/templates/guide.html
@@ -191,14 +191,14 @@
                         variety), gently pick them from the plant. Harvesting regularly encourages further production.</li>
                 </ol>
             </div>
-        <div>
-        <div class="contact">
+        </div>
+        <div class="conatct">
             <div class="contact-content">
-                <h1>Connect</h1>
-                <p style="color: white;">If you have any questions, please feel free to reach out to our team!</p>
-                {% include 'contact.html' %}
+                <h1>Thank You!<h1>
+                        <h1>We Appreciate Your Support</h1>
             </div>
         </div>
+
     </div>
     
 </body>
