--- a/templates/home.html
+++ b/templates/home.html
@@ -88,32 +88,37 @@
                 <div class="headshot">
                     <img src="static/images/brayden.jpeg" alt="Brayden">
                     <h3>Brayden</h3>
+                    <a href="mailto:bvalentini1@nait.ca?subject=Inquiry&body=Hello, I have a question."><b>Connect</b></a>
                 </div>
                 <div class="headshot">
                     <img src="static/images/mya1.jpeg" alt="Mya">
                     <h3>Mya</h3>
+                    <a href="mailto:mmiller75@studentmail.nait.ca?subject=Inquiry&body=Hello, I have a question."><b>Connect</b></a>
                 </div>
                 <div class="headshot">
                     <img src="static/images/aaron.jpeg"alt="Aaron">
-                    <h3>Aaron</h3>
+                    <h3>Aaron:</h3>
+                    <a href="mailto:acoghill1@studentmail.nait.ca?subject=Inquiry&body=Hello, I have a question."><b>Connect</b></a>
+                   
                 </div>
                 <div class="headshot">
                     <img src="static/images/jared_william.jpeg" alt="Jared">
                     <h3>Jared</h3>
+                    <a href="mailto:jwildeman1@studentmail.nait.ca?subject=Inquiry&body=Hello, I have a question."><b>Connect</b></a>
                 </div>
                 <div class="headshot">
                     <img src="static/images/sean_yves.jpeg" alt="Sean">
                     <h3>Sean</h3>
+                    <a href="mailto:svillas1@studentmail.nait.ca?subject=Inquiry&body=Hello, I have a question."><b>Connect</b></a>
+
                 </div>
         </div>
-
         <div class="conatct">
             <div class="contact-content">
-            <h1>Connect</h1>
-            <p>If you have any questions, please feel free to reach out to our team!</p>
-            {% include 'contact.html' %}
+                <h1>Thank You!<h1> 
+                <h1>We Appreciate Your Support</h1>
+            </div>
         </div>
-
     </div>
 </body>
 </html>
