Fix headshot name tag

--- a/templates/home.html
+++ b/templates/home.html
@@ -97,7 +97,7 @@
                 </div>
                 <div class="headshot">
                     <img src="static/images/aaron.jpeg"alt="Aaron">
-                    <h3>Aaron:</h3>
+                    <h3>Aaron</h3>
                     <a href="mailto:acoghill1@studentmail.nait.ca?subject=Inquiry&body=Hello, I have a question."><b>Connect</b></a>
                    
                 </div>
