--- a/templates/home.html
+++ b/templates/home.html
@@ -88,28 +88,28 @@
                 <div class="headshot">
                     <img src="static/images/brayden.jpeg" alt="Brayden">
                     <h3>Brayden</h3>
-                    <a href="mailto:bvalentini1@nait.ca?subject=Inquiry&body=Hello, I have a question."><b>Connect</b></a>
+                    <a href="mailto:bvalentini1010@gmail.coma?subject=Inquiry&body=Hello, I have a question."><b>Connect</b></a>
                 </div>
                 <div class="headshot">
                     <img src="static/images/mya1.jpeg" alt="Mya">
                     <h3>Mya</h3>
-                    <a href="mailto:mmiller75@studentmail.nait.ca?subject=Inquiry&body=Hello, I have a question."><b>Connect</b></a>
+                    <a href="mailto:myamiller6@gmail.com?subject=Inquiry&body=Hello, I have a question."><b>Connect</b></a>
                 </div>
                 <div class="headshot">
                     <img src="static/images/aaron.jpeg"alt="Aaron">
                     <h3>Aaron</h3>
-                    <a href="mailto:acoghill1@studentmail.nait.ca?subject=Inquiry&body=Hello, I have a question."><b>Connect</b></a>
+                    <a href="mailto:a.coghill4@gmail.com?subject=Inquiry&body=Hello, I have a question."><b>Connect</b></a>
                    
                 </div>
                 <div class="headshot">
                     <img src="static/images/jared_william.jpeg" alt="Jared">
                     <h3>Jared</h3>
-                    <a href="mailto:jwildeman1@studentmail.nait.ca?subject=Inquiry&body=Hello, I have a question."><b>Connect</b></a>
+                    <a href="mailto:JaredWildeman66@gmail.com?subject=Inquiry&body=Hello, I have a question."><b>Connect</b></a>
                 </div>
                 <div class="headshot">
                     <img src="static/images/sean_yves.jpeg" alt="Sean">
                     <h3>Sean</h3>
-                    <a href="mailto:svillas1@studentmail.nait.ca?subject=Inquiry&body=Hello, I have a question."><b>Connect</b></a>
+                    <a href="mailto:seanyvcavillas@gamil.com?subject=Inquiry&body=Hello, I have a question."><b>Connect</b></a>
 
                 </div>
         </div>
